# RSPIPUtilities

./: .gitignore  CMakeLists.txt
app/: main.cpp
docs/: ArchitectureGuide.md  DevelopmentRules.md
include/: Algorithm.h  IO.h  ImageData.hpp  RSPIP.h  SuperDebug.hpp  Util.h
include/Algorithm/: CloudDetection.h  ColorBalance.h  Evaluation.h  Mosaic.h  Preprocess.h  Reconstruct.h
include/Algorithm/CloudDetection/: CloudDetectionAlgorithmBase.h  PixelThreshold.h
include/Algorithm/ColorBalance/: ColorBalanceAlgorithmBase.h  ColorBalanceAlgorithmBase.hpp  MatchStatistic.h  MatchStatistic.hpp
include/Algorithm/Detail/: AlgorithmValidation.h  MaskPolicies.h
include/Algorithm/Evaluation/: BoundaryGradientEvaluator.h  BoundaryGradientEvaluator.hpp  EvaluatorAlgorithmBase.h  EvaluatorAlgorithmBase.hpp  PSNREvaluator.h  RMSEEvaluator.h  SSIMEvaluator.h
include/Algorithm/ImageFilter/: FilterAlgorithmBase.h  FilterAlgorithmBase.hpp
include/Algorithm/ImageReconstruct/: ColorBalanceReconstruct.h  IsophoteConstrain.h  Simple.h
include/Algorithm/Mosaic/: AdaptiveColorBalancePatch.h  AdaptiveIsophotePatch.h  AdaptivePatch.h  DynamicPatch.h  DynamicPatch.hpp  MosaicAlgorithmBase.h  MosaicAlgorithmBase.hpp  PixelWiseStrategyMosaic.h  ShowOverLap.h  ShowOverLap.hpp  Simple.h  Simple.hpp  VoronoiPartitionMosaic.h
include/Algorithm/Mosaic/Detail/: AdaptiveStripMosaicBase.h
include/Algorithm/MosaicAlgorithm/: DynamicPatchMosaic.hpp  MosaicAlgorithmBase.hpp  ShowOverLapMosaic.hpp  SimpleMosaic.hpp
include/Algorithm/Preprocess/: GeoCoordinateAlign.h  PreprocessAlgorithmBase.h
include/Algorithm/Reconstruct/: ColorBalanceReconstruct.h  IsophoteConstrain.h  ReconstructAlgorithmBase.h  Simple.h
include/Basic/: CloudGroup.h  CloudGroup.hpp  CloudMask.h  CloudMask.hpp  CloudPixel.h  GeoImage.h  GeoImage.hpp  GeoInfo.h  GeoPixel.h  GeoPixel.hpp  Image.h  Image.hpp  ImageReader.hpp  ImageShow.hpp  ImageWriter.hpp  MaskImage.h  MaskImage.hpp  MaskSelectionPolicy.h  Pixel.h  Pixel.hpp  RegionExtraction.h  RegionGroup.h  RegionPixel.h
include/IO/: ImageReader.h  ImageReader.hpp  ImageSaveVisitor.h  ImageSaveVisitor.hpp  ImageSaveVisitorbackup.hpp  ImageShow.hpp  ImageShowVisitor.hpp  ImageWriter.h  ImageWriter.hpp
include/Interface/: IAlgorithm.h  IGeoTransformer.h  IGeoTransformer.hpp  IImageVisitor.h  IImageVisitor.hpp
include/Math/: Statistics.hpp
include/Math/LinearSystem/: LinearMatrixBase.h  LinearSolver.h  OpenCvSolver.h  SparseMatrix.h  SparseSolver.h
include/Mosaic/: IMosaicAlgorithm.h  SimpleMosaic.hpp
include/MosaicAlgorithm/: DynmiacPatchMosaic.hpp  IMosaicAlgorithm.h  ShowOverLapMosaic.hpp  SimpleMosaic.hpp
include/Reader/: ImageReader.hpp
include/Show/: ImageShow.hpp
include/Util/: Color.h  Color.hpp  Dispacther.h  Dispatcher.h  General.h  General.hpp  ImageInfoPrinter.h  ImageInfoVisitor.h  ImageInfoVisitor.hpp  ImageShow.h  ProjectionTransformer.h  SortImage.hpp  SuperDebug.hpp
include/Writer/: ImageWriter.hpp
samples/: ExampleScenarios.cpp  ExampleScenarios.h
src/: algorithmTest.hpp  main.cpp
src/Algorithm/CloudDetection/: PixelThreshold.cpp
src/Algorithm/ColorBalance/: MatchStatistic.cpp
src/Algorithm/Evaluation/: BoundaryGradientEvaluator.cpp  PSNREvaluator.cpp  RMSEEvaluator.cpp  SSIMEvaluator.cpp
src/Algorithm/ImageReconstruct/: ColorBalanceReconstruct.cpp  IsophoteConstrain.cpp  Simple.cpp
src/Algorithm/Mosaic/: AdaptiveColorBalancePatch.cpp  AdaptiveIsophotePatch.cpp  AdaptivePatch.cpp  DynamicPatch.cpp  MosaicAlgorithmBase.cpp  PixelWiseStrategyMosaic.cpp  ShowOverLap.cpp  Simple.cpp  VoronoiPartitionMosaic.cpp
src/Algorithm/Mosaic/Detail/: AdaptiveStripMosaicBase.cpp
src/Algorithm/Preprocess/: GeoCoordinateAlign.cpp
src/Algorithm/Reconstruct/: ColorBalanceReconstruct.cpp  IsophoteConstrain.cpp  Simple.cpp
src/Basic/: CloudMask.cpp  GeoImage.cpp  GeoInfo.cpp  Image.cpp  MaskImage.cpp  RegionExtraction.cpp
src/IO/: ImageReader.cpp  ImageSaveVisitor.cpp  ImageWriter.cpp
src/Interface/: IGeoTransformer.cpp
src/Math/LinearSystem/: OpenCvSolver.cpp  SparseMatrix.cpp  SparseSolver.cpp
src/Util/: Color.cpp  General.cpp  ImageInfoPrinter.cpp  ImageInfoVisitor.cpp  ImageShow.cpp  ProjectionTransformer.cpp
